--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Value-chain-demo</h1>
+        <h1>ChainGenie(R) Value Chain Demo</h1>
         <h2>Value Chain Demo</h2>
         <a href="https://github.com/ChainGenie/Value-Chain-Demo" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -29,30 +29,50 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<B>Value Chain Demo:</B><br/>
+Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingenie.com</a>
+<br/><br/>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<b>Information about this project:</b>
+-	This demo was developed as part of WCF SBL® lab.
+-	Application is built on Ethereum blockchain.
+-	Application is configured to run on private Ethereum test node.
+-	All transaction values are in Ether.  Other currencies coming soon.
+-	DAPP uses solidity as its programming language for smart contracts.
+-	All interactions with the blockchain uses <a href="http://chaingenie.com">ChainGenie®</a> sandbox framework.
+-	ChainGenie® catalog used for this demo is “<a href="http://chaingenie.com/demo.html">Value Chain APIs</a>”.
+-	Email magic@chaingenie.com for your sandbox ApiKey.
+-	DAPP code for the solution is available on <a href="https://github.com/ChainGenie/Value-Chain-Demo">GitHub</a>.
+<br/><br/>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<b>Workflow:</b>
+- Seller initiates sale – CreateTradeContract
+   	- Escrow from seller added for value of contract
+   	- End transaction state = created
+-	Buyer confirms interest in buying – ConfirmPurchase
+  	- Escrow from buyer added to value of contract
+  	- Invoice document is created with all details from invoice template
+  	- Invoice is added IPFS and blockchain
+  	- End transaction state = locked
+-	Seller can cancel the market trade – ConfirmAbort
+  	- Escrow from seller is returned back to the seller
+  	- End transaction state = inactive
+-	OPTION 1: Seller can refund - ConfirmRefund
+  	- Escrow distributed back to both seller and vendor
+  	- End transaction state = inactive
+-	OPTION 2 : Buyer can confirm receipt of item – ConfirmReceived
+  	- Value fully sent to seller from escrow
+  	- End transaction state = inactive
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<br/><br/>
+<b>License and Software Versions: </b><a href="https://github.com/ChainGenie/Value-Chain-Demo/blob/master/LICENSE">License</a>
+<BR/>
+Should you have installed the open source version of the Software that version of the Software is subject to this EULA as well as the terms of the GNU Affero General Public License version 3 or later. 
+<br/>
+Please note, however, that as an end user of the Software the provisions of this EULA shall prevail. Should You wish to change or distribute the Software the provisions of the GNU Affero General Public License shall take precedence.
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-        </section>
+</h3>
+      </section>
 
         <aside id="sidebar">
           <a href="https://github.com/ChainGenie/Value-Chain-Demo/zipball/master" class="button">
