--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
 <br/><br/>
 
 <b>Information about this project:</b>
--	This demo was developed as part of WCF SBL® lab.
--	Application is built on Ethereum blockchain.
--	Application is configured to run on private Ethereum test node.
--	All transaction values are in Ether.  Other currencies coming soon.
--	DAPP uses solidity as its programming language for smart contracts.
--	All interactions with the blockchain uses <a href="http://chaingenie.com">ChainGenie®</a> sandbox framework.
--	ChainGenie® catalog used for this demo is “<a href="http://chaingenie.com/demo.html">Value Chain APIs</a>”.
--	Email magic@chaingenie.com for your sandbox ApiKey.
--	DAPP code for the solution is available on <a href="https://github.com/ChainGenie/Value-Chain-Demo">GitHub</a>.
+*	This demo was developed as part of WCF SBL® lab.
+*	Application is built on Ethereum blockchain.
+*	Application is configured to run on private Ethereum test node.
+*	All transaction values are in Ether.  Other currencies coming soon.
+*	DAPP uses solidity as its programming language for smart contracts.
+*	All interactions with the blockchain uses <a href="http://chaingenie.com">ChainGenie®</a> sandbox framework.
+*	ChainGenie® catalog used for this demo is “<a href="http://chaingenie.com/demo.html">Value Chain APIs</a>”.
+*	Email magic@chaingenie.com for your sandbox ApiKey.
+*	DAPP code for the solution is available on <a href="https://github.com/ChainGenie/Value-Chain-Demo">GitHub</a>.
 <br/><br/>
 
 <b>Workflow:</b>
