--- a/index.html
+++ b/index.html
@@ -33,35 +33,35 @@
 Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingenie.com</a>
 <br/><br/>
 
-<b>Information about this project:</b>
-*	This demo was developed as part of WCF SBL® lab.
-*	Application is built on Ethereum blockchain.
-*	Application is configured to run on private Ethereum test node.
-*	All transaction values are in Ether.  Other currencies coming soon.
-*	DAPP uses solidity as its programming language for smart contracts.
-*	All interactions with the blockchain uses <a href="http://chaingenie.com">ChainGenie®</a> sandbox framework.
-*	ChainGenie® catalog used for this demo is “<a href="http://chaingenie.com/demo.html">Value Chain APIs</a>”.
-*	Email magic@chaingenie.com for your sandbox ApiKey.
-*	DAPP code for the solution is available on <a href="https://github.com/ChainGenie/Value-Chain-Demo">GitHub</a>.
+<b>Information about this project:</b><br/><br/>
+*	This demo was developed as part of WCF SBL® lab.<br/>
+*	Application is built on Ethereum blockchain.<br/>
+*	Application is configured to run on private Ethereum test node.<br/>
+*	All transaction values are in Ether.  Other currencies coming soon.<br/>
+*	DAPP uses solidity as its programming language for smart contracts.<br/>
+*	All interactions with the blockchain uses <a href="http://chaingenie.com">ChainGenie®</a> sandbox framework.<br/>
+*	ChainGenie® catalog used for this demo is “<a href="http://chaingenie.com/demo.html">Value Chain APIs</a>”.<br/>
+*	Email magic@chaingenie.com for your sandbox ApiKey.<br/>
+*	DAPP code for the solution is available on <a href="https://github.com/ChainGenie/Value-Chain-Demo">GitHub</a>.<br/>
 <br/><br/>
 
-<b>Workflow:</b>
-- Seller initiates sale – CreateTradeContract
-   	- Escrow from seller added for value of contract
-   	- End transaction state = created
--	Buyer confirms interest in buying – ConfirmPurchase
-  	- Escrow from buyer added to value of contract
-  	- Invoice document is created with all details from invoice template
-  	- Invoice is added IPFS and blockchain
-  	- End transaction state = locked
--	Seller can cancel the market trade – ConfirmAbort
-  	- Escrow from seller is returned back to the seller
-  	- End transaction state = inactive
--	OPTION 1: Seller can refund - ConfirmRefund
-  	- Escrow distributed back to both seller and vendor
-  	- End transaction state = inactive
--	OPTION 2 : Buyer can confirm receipt of item – ConfirmReceived
-  	- Value fully sent to seller from escrow
+<b>Workflow:</b><br/><br/>
+1. Seller initiates sale – CreateTradeContract<br/>
+   	- Escrow from seller added for value of contract<br/>
+   	- End transaction state = created<br/>
+2.	Buyer confirms interest in buying – ConfirmPurchase<br/>
+  	- Escrow from buyer added to value of contract<br/>
+  	- Invoice document is created with all details from invoice template<br/>
+  	- Invoice is added IPFS and blockchain<br/>
+  	- End transaction state = locked<br/>
+3.	Seller can cancel the market trade – ConfirmAbort<br/>
+  	- Escrow from seller is returned back to the seller<br/>
+  	- End transaction state = inactive<br/>
+4.	OPTION 1: Seller can refund - ConfirmRefund<br/>
+  	- Escrow distributed back to both seller and vendor<br/>
+  	- End transaction state = inactive<br/>
+5.	OPTION 2 : Buyer can confirm receipt of item – ConfirmReceived<br/>
+  	- Value fully sent to seller from escrow<br/>
   	- End transaction state = inactive
 
 <br/><br/>
