--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>ChainGenie(R) Value Chain Demo</h1>
+        <h1>ChainGenie® Value Chain Demo</h1>
         <h2>Value Chain Demo</h2>
         <a href="https://github.com/ChainGenie/Value-Chain-Demo" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -30,10 +30,12 @@
         <section id="main-content">
           <h3>
 <B>Value Chain Demo:</B><br/>
+          </h3>
 Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingenie.com</a>
 <br/><br/>
-
+<h3>
 <b>Information about this project:</b><br/><br/>
+          </h3>
 *	This demo was developed as part of WCF SBL® lab.<br/>
 *	Application is built on Ethereum blockchain.<br/>
 *	Application is configured to run on private Ethereum test node.<br/>
@@ -45,7 +47,8 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
 *	DAPP code for the solution is available on <a href="https://github.com/ChainGenie/Value-Chain-Demo">GitHub</a>.<br/>
 <br/><br/>
 
-<b>Workflow:</b><br/><br/>
+          <h3>
+            <b>Workflow:</b></h3><br/><br/>
 1. Seller initiates sale – CreateTradeContract<br/>
    	- Escrow from seller added for value of contract<br/>
    	- End transaction state = created<br/>
@@ -65,7 +68,8 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
   	- End transaction state = inactive
 
 <br/><br/>
-<b>License and Software Versions: </b><a href="https://github.com/ChainGenie/Value-Chain-Demo/blob/master/LICENSE">License</a>
+          <h3>
+<b>License and Software Versions: </b><a href="https://github.com/ChainGenie/Value-Chain-Demo/blob/master/LICENSE">License</a></h3>
 <BR/>
 Should you have installed the open source version of the Software that version of the Software is subject to this EULA as well as the terms of the GNU Affero General Public License version 3 or later. 
 <br/>
