--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<B>Value Chain Demo:</B><br/>
+<B>Value Chain Demo:</B>
           </h3>
 Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingenie.com</a>
 <br/><br/>
 <h3>
-<b>Information about this project:</b><br/><br/>
+<b>Information about this project:</b>
           </h3>
 *	This demo was developed as part of WCF SBL® lab.<br/>
 *	Application is built on Ethereum blockchain.<br/>
@@ -48,7 +48,7 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
 <br/><br/>
 
           <h3>
-            <b>Workflow:</b></h3><br/><br/>
+            <b>Workflow:</b></h3>
 1. Seller initiates sale – CreateTradeContract<br/>
    	- Escrow from seller added for value of contract<br/>
    	- End transaction state = created<br/>
@@ -74,8 +74,6 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
 Should you have installed the open source version of the Software that version of the Software is subject to this EULA as well as the terms of the GNU Affero General Public License version 3 or later. 
 <br/>
 Please note, however, that as an end user of the Software the provisions of this EULA shall prevail. Should You wish to change or distribute the Software the provisions of the GNU Affero General Public License shall take precedence.
-
-</h3>
       </section>
 
         <aside id="sidebar">
