--- a/index.html
+++ b/index.html
@@ -87,17 +87,20 @@ Please note, however, that as an end user of the Software the provisions of this
           <br/>
           
 <b>Project visionaires:</b><br>
-- Mark Painter, CFA, FRM, MBA
-  - <a href="https://www.linkedin.com/in/william-mark-painter-2366b462">LinkedIn profile</a>
-  - Organization: consensus-evolution
-- Charles Meier
-  - <a href="https://www.linkedin.com/in/charles-meier-20836593">LinkedIn profile</a>
+          <ul>Mark Painter, CFA, FRM, MBA
+          <li><a href="https://www.linkedin.com/in/william-mark-painter-2366b462">LinkedIn profile</a></li>
+            <li>Organization: consensus-evolution</li>
+          </ul>
+        <ul>Charles Meier
+          <li><a href="https://www.linkedin.com/in/charles-meier-20836593">LinkedIn profile</a></li>
+          </ul>
 <br/>
 
 <b>Project mentor / guide:</b><br>
-- Usha Krishnan
-  - <a href="https://www.linkedin.com/in/upriya">LinkedIn profile</a>
-  - Organization: <a href="http://chaingenie.com">ChainGenie®</a>
+<ul>Usha Krishnan
+  <li><a href="https://www.linkedin.com/in/upriya">LinkedIn profile</a></li>
+  <li>Organization: <a href="http://chaingenie.com">ChainGenie®</a></li>
+          </ul>
 <br/>
           
           <br/><br/>
