--- a/index.html
+++ b/index.html
@@ -87,17 +87,25 @@ Please note, however, that as an end user of the Software the provisions of this
           <br/><hr/>
           
 <b>Project visionaires:</b><br>
-          <ul>Mark Painter, CFA, FRM, MBA
+          <ul>
+            <li>
+          <b>Mark Painter, CFA, FRM, MBA</b>
+          <ul>
           <li><a href="https://www.linkedin.com/in/william-mark-painter-2366b462">LinkedIn profile</a></li>
             <li>Organization: consensus-evolution</li>
           </ul>
-        <ul>Charles Meier
+            </li>
+            <li>
+        <b>Charles Meier<b>
+          <ul>
           <li><a href="https://www.linkedin.com/in/charles-meier-20836593">LinkedIn profile</a></li>
           </ul>
+          </ul>
+          </li>
 <br/>
 
 <b>Project mentor / guide:</b><br>
-<ul>Usha Krishnan
+<ul><b>Usha Krishnan<b>
   <li><a href="https://www.linkedin.com/in/upriya">LinkedIn profile</a></li>
   <li>Organization: <a href="http://chaingenie.com">ChainGenie®</a></li>
           </ul>
