--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@ Please note, however, that as an end user of the Software the provisions of this
           <ul>
           <li><a href="https://www.linkedin.com/in/charles-meier-20836593">LinkedIn profile</a></li>
           </ul>
-          </ul>
           </li>
+          </ul>
 <br/>
 
 <b>Project mentor / guide:</b><br>
-<ul><b>Usha Krishnan<b>
+<b>Usha Krishnan<b>
+  <ul>
   <li><a href="https://www.linkedin.com/in/upriya">LinkedIn profile</a></li>
   <li>Organization: <a href="http://chaingenie.com">ChainGenie®</a></li>
           </ul>
