--- a/index.html
+++ b/index.html
@@ -96,12 +96,11 @@ Please note, however, that as an end user of the Software the provisions of this
               </ul>
               </li>
               <li>
-                <b>Charles Meier<b>
+                <b>Charles Meier</b>
                 <ul>
                 <li><a href="https://www.linkedin.com/in/charles-meier-20836593">LinkedIn profile</a></li>
                 </ul>
               </li>
-            </li>
           </ul>
 <hr/>
 <b>Project mentor / guide:</b><br>
@@ -110,10 +109,8 @@ Please note, however, that as an end user of the Software the provisions of this
     <b>Usha Krishnan<b>
     <ul>
   <li><a href="https://www.linkedin.com/in/upriya">LinkedIn profile</a></li>
-  <li>Organization: <a href="http://chaingenie.com">ChainGenie®</a></li>
-      </li>
-      </ul></li>
-          </ul>
+      <li>Organization: <a href="http://chaingenie.com">ChainGenie®</a></li>
+      </ul>
           <hr/>
           
           <br/><br/>
