--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Please note, however, that as an end user of the Software the provisions of this
 <b>Project mentor / guide:</b><br>
 <ul>
   <li>
-    <b>Usha Krishnan<b>
+    <b>Usha Krishnan</b>
     <ul>
   <li><a href="https://www.linkedin.com/in/upriya">LinkedIn profile</a></li>
       <li>Organization: <a href="http://chaingenie.com">ChainGenie®</a></li>
