--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Value-chain-demo by ChainGenie</title>
+    <title>Value Chain Demo using ChainGenie</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>ChainGenie® Value Chain Demo</h1>
-        <h2>Value Chain Demo</h2>
+        <h1>Value Chain Demo</h1>
+        <h2>Value Chain Demo using ChainGenie® sandbox</h2>
         <a href="https://github.com/ChainGenie/Value-Chain-Demo" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
