--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Value Chain Demo</h1>
-        <h2>Value Chain Demo using ChainGenie® sandbox</h2>
+        <h1>Value Chain</h1>
+        <h2>Value Chain on blockchain <br/>built on ChainGenie® sandbox</h2>
         <a href="https://github.com/ChainGenie/Value-Chain-Demo" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
