--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Value Chain</h1>
-        <h2>on blockchain built using ChainGenie® sandbox</h2>
+        <h2>on blockchain built on ChainGenie® sandbox</h2>
         <a href="https://github.com/ChainGenie/Value-Chain-Demo" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
