--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Please note, however, that as an end user of the Software the provisions of this
               </ul>
               </li>
               <li>
-                <b>Charles Meier</b>
+                <b>Charles Meier, MBA</b>
                 <ul>
                 <li><a href="https://www.linkedin.com/in/charles-meier-20836593">LinkedIn profile</a></li>
                 </ul>
