--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
 <h3>
 <b>Information about this project:</b>
           </h3>
-*	This demo was developed as part of WCF SBL® lab.<br/>
+*	This demo was developed as part of WCF SBL™ lab.<br/>
 *	Application is built on Ethereum blockchain.<br/>
 *	Application is configured to run on private Ethereum test node.<br/>
 *	All transaction values are in Ether.  Other currencies coming soon.<br/>
