--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Please note, however, that as an end user of the Software the provisions of this
 
           <br/><hr/>
           
-<b>Project visionaires:</b><br>
+<b>Project visionaries:</b><br>
           <ul>
             <li>
               <b>Mark Painter, CFA, FRM, MBA</b>
