--- a/index.html
+++ b/index.html
@@ -48,23 +48,27 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
 
           <h3>
             <b>Workflow:</b></h3>
-1. Seller initiates sale – CreateTradeContract<br/>
+1. LIST: Seller initiates sale – CreateTradeContract<br/>
    	- Escrow from seller added for value of contract<br/>
    	- End transaction state = created<br/>
-2.	Buyer confirms interest in buying – ConfirmPurchase<br/>
+2.	BID / BUY: Buyer confirms interest in buying – ConfirmPurchase<br/>
   	- Escrow from buyer added to value of contract<br/>
   	- Invoice document is created with all details from invoice template<br/>
   	- Invoice is added IPFS and blockchain<br/>
   	- End transaction state = locked<br/>
-3.	Seller can cancel the market trade – ConfirmAbort<br/>
+3.	DELIVERY CONFIRMATION: Buyer can confirm receipt of item – ConfirmReceived<br/>
+  	- Value fully sent to seller from escrow<br/>
+  	- End transaction state = inactive<BR/>
+    - TRANSACTION COMPLETE
+4.	ADDON: Seller option 1<br>
+    - Seller can cancel the market trade after listing but before bid/buy – ConfirmAbort<br/>
   	- Escrow from seller is returned back to the seller<br/>
   	- End transaction state = inactive<br/>
-4.	OPTION 1: Seller can refund - ConfirmRefund<br/>
-  	- Escrow distributed back to both seller and vendor<br/>
+5.	ADDON: Seller option 2<br>
+    - Seller can cancel the market trade after bid/buy by refunding the seller – ConfirmRefund<br/>
+  	- Escrow from buyer is returned back to the buyer<br/>
+    - Escrow from seller is returned back to the seller (penalties can be imposed)<br/>
   	- End transaction state = inactive<br/>
-5.	OPTION 2 : Buyer can confirm receipt of item – ConfirmReceived<br/>
-  	- Value fully sent to seller from escrow<br/>
-  	- End transaction state = inactive
 
 <br/>
           <h3>
