--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
 3.	DELIVERY CONFIRMATION: Buyer can confirm receipt of item – ConfirmReceived<br/>
   	- Value fully sent to seller from escrow<br/>
   	- End transaction state = inactive<BR/>
-    - TRANSACTION COMPLETE
-4.	ADDON: Seller option 1<br>
+    - TRANSACTION COMPLETE<br/>
+    - ---------------------------------------------------------------------
+4.	Addon: Seller option 1<br>
     - Seller can cancel the market trade after listing but before bid/buy – ConfirmAbort<br/>
   	- Escrow from seller is returned back to the seller<br/>
   	- End transaction state = inactive<br/>
-5.	ADDON: Seller option 2<br>
+5.	Addon: Seller option 2<br>
     - Seller can cancel the market trade after bid/buy by refunding the seller – ConfirmRefund<br/>
   	- Escrow from buyer is returned back to the buyer<br/>
     - Escrow from seller is returned back to the seller (penalties can be imposed)<br/>
