--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
   	- End transaction state = inactive<br/>
 
 <br/>
+
+The below represents the components that can make up your workflow and a proposal to put them together. <br>
+<hr/>
+<br/><img src="https://github.com/ChainGenie/Value-Chain-Demo/blob/master/images/components.JPG" width="400" /><br/>
+<br/><img src="https://github.com/ChainGenie/Value-Chain-Demo/blob/master/images/workflow.JPG" width="400" />
+<hr/>
+
+<br/>
           <h3>
 <b>License and Software Versions: </b><a href="https://github.com/ChainGenie/Value-Chain-Demo/blob/master/LICENSE">License</a></h3>
 Should you have installed the open source version of the Software that version of the Software is subject to this EULA as well as the terms of the GNU Affero General Public License version 3 or later. 
