--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ Link to working demo: <a href="http://chaingenie.com">http://valuechain.chaingen
 
 The below represents the components that can make up your workflow and a proposal to put them together. <br>
 <hr/>
-<br/><img src="https://github.com/ChainGenie/Value-Chain-Demo/blob/master/images/components.JPG" width="400" /><br/>
-<br/><img src="https://github.com/ChainGenie/Value-Chain-Demo/blob/master/images/workflow.JPG" width="400" />
+<br/><img src="images/components.JPG" width="400" /><br/>
+<br/><img src="images/workflow.JPG" width="400" />
 <hr/>
 
 <br/>
