--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ The below represents the components that can make up your workflow and a proposa
 <br/><img src="images/components.JPG" width="400" /><br/>
 <br/><img src="images/workflow.JPG" width="400" />
 <hr/>
-
+<video src="demo.mp4" width="320" height="200" controls preload></video>
 <br/>
           <h3>
 <b>License and Software Versions: </b><a href="https://github.com/ChainGenie/Value-Chain-Demo/blob/master/LICENSE">License</a></h3>
