--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ The below represents the components that can make up your workflow and a proposa
 <hr/>
 <br/><img src="images/components.JPG" width="400" /><br/>
 <br/><img src="images/workflow.JPG" width="400" />
-<hr/>
+<hr/><br/>Demonstration:<br/>
 <video src="demo.mp4" width="320" height="200" controls preload></video>
 <br/>
           <h3>
